# FastCrypto

./: .env.example  README.md  main.py  pyproject.toml  structure_generator.py
src/api/v1/auth/: authentication.py
src/api/v1/endpoints/: general_work.py  healthcheck.py  index.py  markets.py  orders.py  trading.py  wallets.py
src/core/config/: auth_config.py  logger.py  models.py  settings.py
src/core/dependencies/: auth_deps.py  db_helper.py
src/core/exceptions/: exceptions_factory.py  exceptions_handler.py
src/core/pydantic_schemas/: template_schema.py  trading_schema.py  user.py
src/core/services/auth/: token_service.py  user_service.py
src/core/services/cache/redis/: market_data.py  redis_fastapi.py
src/core/services/crypto/exchange/: matching.py  trade.py
src/core/services/database/models/: order.py  refresh_token.py  token.py  user.py  wallet.py
src/core/services/database/orm/: position.py  token_crud.py  user_orm.py
src/core/services/database/postgres/models/: base.py  refresh_token.py  user.py
src/core/services/database/postgres/orm/: token_crud.py  user_orm.py
src/core/services/tasks/: celery.py  period_upload_symbs.py
src/core/utils/: prepared_templates.py
src/frontend/menu/: urls.py
src/migrations/: env.py
src/migrations/versions/: 4e2911fcc5c0_init.py  9c195a7fa015_.py  f2313894acfb_.py
