[project]
name = "fastcrypto"
version = "0.0.1"
description = ""
authors = [
    {name = "Marsel",email = "hasanovmarsel26@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "bcrypt (>=4.3.0,<5.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "aiohttp (>=3.11.18,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "authlib (>=1.5.2,<2.0.0)",
    "jwt (>=1.3.1,<2.0.0)",
    "websockets (>=15.0.1,<16.0.0)",
    "numpy (>=2.2.5,<3.0.0)",
    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "requests (>=2.32.3,<3.0.0)",
    "pybit (>=5.10.1,<6.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery (>=5.5.2,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"